<resources>
    <string name="app_name">Innum</string>
    <string name="string_tV1_second">Lista de la compra</string>
    <string name="string_text_second">Indicar nombre</string>
    <string name="string_text2_second">Indicar cantidad</string>
    <string name="tV2_second">Deslizar para borrar, mantener pulsado para editar ítem.</string>
    <string name="delbutton_second">Eliminar todo</string>
    <string name="button_second">Añadir</string>
    <string name="string_rellenar">Rellene el campo de texto.</string>
    <string name="string_err">Error.</string>
    <string name="string_error">Error al insertar: elemento repetido.</string>
    <string name="string_error_vacio">Error al eliminar: lista vacia.</string>
    <string name="string_error_create">Error al crear.</string>
    <string name="string_error_edit">Error al editar.</string>
    <string name="string_duda">¿Confirma eliminar toda la lista?</string>
    <string name="string_duda_general">¿Confirma eliminar toda la lista de listas?</string>
    <string name="string_si">Afirmativo</string>
    <string name="string_no">Negativo</string>
    <string name="string_cancel">Cancelar</string>
    <string name="string_rellenar_lista">Introduzca un título.</string>
    <string name="title_new_list">Crear nueva lista:</string>
    <string name="msg_new_list">Introduzca el nombre de la lista, por favor: </string>
    <string name="string_position">Por favor, situese en la lista objetivo.</string>
    <string name="string_list_name">"Lista/s: "</string>
    <string name="string_add_list">Añadir lista</string>
    <string name="string_tv2_third">Deslizar para borrar, mantener pulsado para editar.</string>
    <string name="string_delete">Eliminar</string>
    <string name="string_edit">Editar</string>
    <string name="string_edit_title">Editor</string>
    <string name="copy">duplicado</string>
    <string name="export_json_title">Exportar datos de Innum</string>
    <string name="export_json_download">Descargar archivo JSON</string>
    <string name="export_json_share">Compartir archivo JSON</string>
    <string name="share_json_chooser">Compartir datos de Innum</string>
    <string name="json_file_saved">Archivo JSON guardado.</string>
    <string name="json_save_error">Error al guardar datos.</string>
    <string name="json_export_error">Error al exportar datos.</string>
</resources>